--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,5 +8,10 @@ a img {
 }
 
 .navbar-brand img {
-    height: 30px;
+    margin-top: 0;
+    height: 40px;
+}
+
+.navbar ul li a {
+    margin-top: 15px;
 }
